--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-sidebar-menu": "^4.6.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
