--- a/fe/package.json
+++ b/fe/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "sass": "^1.26.10",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-sidebar-menu": "^4.6.1",
@@ -27,6 +30,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^9.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
