--- a/be/fe/package.json
+++ b/be/fe/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "sass": "^1.26.10",
     "vue": "^2.6.11",
+    "vue-d3-charts": "^0.2.8",
     "vue-router": "^3.2.0",
     "vue-sidebar-menu": "^4.6.1",
     "vuex": "^3.4.0"
