--- a/DIS/client/package.json
+++ b/DIS/client/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@carbon/charts-vue": "^0.34.9",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.1.0",
+    "carbon-components": "^10.17.0",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
     "sass": "^1.26.10",
