--- a/DIS/server/package.json
+++ b/DIS/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "clean-css": "^4.2.3",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
