--- a/DIS/server/package.json
+++ b/DIS/server/package.json
@@ -12,7 +12,10 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "morgan": "~1.9.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "request": "^2.88.2"
   }
 }
