--- a/DIS/client/package.json
+++ b/DIS/client/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "@carbon/charts-vue": "^0.34.9",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.1.0",
     "carbon-components": "^10.17.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "d3": "^5.16.0",
     "sass": "^1.26.10",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-d3-charts": "^0.2.8",
     "vue-drag-resize": "^1.4.2",
     "vue-router": "^3.2.0",
