--- a/DIS/server/package.json
+++ b/DIS/server/package.json
@@ -10,6 +10,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "elasticsearch": "^16.7.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
