logstash config수정, elastic/get부분 전체 넘겨주도록 수정

--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -8,7 +8,6 @@ input {
 ## Add your filters / logstash plugins configuration here
 output {
 	elasticsearch {
-		hosts => "elasticsearch:9200"
-                index => "logstash-%{+YYYY.MM.dd.HH.mm.ss}"
+                index => "test"
 	}
 }
