원하는 데이터와 검색어를 넘기면 해당 검색결과의 원하는 데이터 부분만 출력하는 부분 작성

--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -8,6 +8,7 @@ input {
 ## Add your filters / logstash plugins configuration here
 output {
 	elasticsearch {
+				hosts => "elasticsearch:9200"
                 index => "test"
 	}
 }
