--- a/DIS/server/package.json
+++ b/DIS/server/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
     "pug": "^3.0.0",
     "request": "^2.88.2"
   }
