API post로 변경 logstash index변경

--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -9,6 +9,6 @@ input {
 output {
 	elasticsearch {
 				hosts => "elasticsearch:9200"
-                index => "%{+YYYY.MM.dd}"
+                index => "iotlog-%{+YYYY.MM.dd}"
 	}
 }
